<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_camera_alt_24"
            android:title="@string/home" />

        <item
            android:id="@+id/galleryFragment"
            android:icon="@drawable/baseline_collections_24"
            android:title="@string/gallery" />

        <item
            android:id="@+id/slideshowFragment"
            android:icon="@drawable/baseline_video_library_24"
            android:title="@string/slideshow" />


        <item
            android:id="@+id/toolsFragment"
            android:icon="@drawable/baseline_build_24"
            android:title="@string/tools" />

    </group>

    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/shareFragment"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share" />
        <item
            android:id="@+id/sendFragment"
            android:icon="@drawable/baseline_send_24"
            android:title="@string/send" />
    </group>
</menu>

